# rust-path-tracer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  custom3d_wgpu_shader.wgsl  rust-toolchain.toml  scene.blend  scene.blend1  scene.glb
benches/: benchmark.rs
kernels/: Cargo.toml
kernels/compute/: Cargo.toml
kernels/compute/src/: bsdf.rs  intersection.rs  lib.rs  rng.rs  skybox.rs  util.rs  vec.rs
kernels/src/: bsdf.rs  intersection.rs  lib.rs  light_pick.rs  rng.rs  skybox.rs  util.rs  vec.rs
scenes/: DarkCornell.glb  FurnaceTest.glb  PBRTest.glb  VeachMIS.glb
shared_structs/: Cargo.toml
shared_structs/src/: image_polyfill.rs  lib.rs
src/: app.rs  asset.rs  atlas.rs  benchmark.rs  bvh.rs  gpgpu2.rs  lib.rs  light_pick.rs  main.rs  trace.rs  window.rs
src/resources/: render.wgsl
src/shaders/: basic_frag.glsl  basic_vert.glsl  render.wgsl
tests/: correctness_tests.rs
